Bug 1380499 - Prevent horizontal scrollbar from appearing in the console after vertical overflow. r=nchevobbe
MozReview-Commit-ID: zU3uHLLmef

UltraBlame original commit: a072c721ee167b3b58999df2cacc914aa48af6bb

--- a/devtools/client/themes/webconsole.css
+++ b/devtools/client/themes/webconsole.css
@@ -4275,20 +4275,6 @@ output
 wrapper
 .
 message
-{
-width
-:
-100vw
-;
-}
-.
-webconsole
--
-output
--
-wrapper
-.
-message
 -
 flex
 -
